# stat386-spotify-project

./: .gitignore  AppDataCleanup.ipynb  README.md  app.py  documentation.html  documentation.qmd  github_data_ts.ipynb  pyproject.toml  pyrightconfig.json  report.html  report.qmd  requirements.txt  tutorial.html  tutorial.qmd
data/: taylor_swift_tracks.csv
spotify_tools/: __init__.py  analysis.py  clean.py
