[project]
name = "spotify-tools-stat386"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "build>=1.4.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "matplotlib-stubs>=0.3.11",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pandas-stubs>=3.0.0.260204",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scikit-learn-stubs>=0.0.3",
    "stat386-spotify-project>=0.1.0",
    "streamlit>=1.56.0",
    "twine>=6.2.0",
    "types-requests>=2.33.0.20260408",
]
